--- a/wp-content/themes/atu/prepros.cfg
+++ b/wp-content/themes/atu/prepros.cfg
@@ -3202,6 +3202,426 @@
           "optimized": false,
           "height": 169,
           "width": 169
+        },
+        "3528ed5d": {
+          "id": "3528ed5d",
+          "path": "images/placeholders/pdf.jpg",
+          "output": "images/placeholders/pdf.jpg",
+          "name": "pdf.jpg",
+          "category": "IMAGE",
+          "size": 5036,
+          "type": "jpg",
+          "initialSize": 5036,
+          "optimized": false,
+          "height": 105,
+          "width": 115
+        },
+        "2b87d756": {
+          "id": "2b87d756",
+          "path": "assets/images/icon-tel.png",
+          "output": "assets/images/icon-tel.png",
+          "name": "icon-tel.png",
+          "category": "IMAGE",
+          "size": 1645,
+          "type": "png",
+          "initialSize": 1645,
+          "optimized": false,
+          "height": 34,
+          "width": 32
+        },
+        "e5b4eb42": {
+          "id": "e5b4eb42",
+          "path": "page-templates/vendors-list.php",
+          "output": "page-templates/vendors-list.php",
+          "name": "vendors-list.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "575ead86": {
+          "id": "575ead86",
+          "path": "images/placeholders/vendor1.jpg",
+          "output": "images/placeholders/vendor1.jpg",
+          "name": "vendor1.jpg",
+          "category": "IMAGE",
+          "size": 38740,
+          "type": "jpg",
+          "initialSize": 38740,
+          "optimized": false,
+          "height": 219,
+          "width": 219
+        },
+        "9e6e7f04": {
+          "id": "9e6e7f04",
+          "path": "images/placeholders/vendor2.jpg",
+          "output": "images/placeholders/vendor2.jpg",
+          "name": "vendor2.jpg",
+          "category": "IMAGE",
+          "size": 48036,
+          "type": "jpg",
+          "initialSize": 48036,
+          "optimized": false,
+          "height": 219,
+          "width": 219
+        },
+        "f7c50dac": {
+          "id": "f7c50dac",
+          "path": "images/placeholders/vendor3.jpg",
+          "output": "images/placeholders/vendor3.jpg",
+          "name": "vendor3.jpg",
+          "category": "IMAGE",
+          "size": 34024,
+          "type": "jpg",
+          "initialSize": 34024,
+          "optimized": false,
+          "height": 219,
+          "width": 219
+        },
+        "297d9465": {
+          "id": "297d9465",
+          "path": "images/placeholders/vendor4.jpg",
+          "output": "images/placeholders/vendor4.jpg",
+          "name": "vendor4.jpg",
+          "category": "IMAGE",
+          "size": 48446,
+          "type": "jpg",
+          "initialSize": 48446,
+          "optimized": false,
+          "height": 219,
+          "width": 219
+        },
+        "62f448b8": {
+          "id": "62f448b8",
+          "path": "images/placeholders/vendor5.jpg",
+          "output": "images/placeholders/vendor5.jpg",
+          "name": "vendor5.jpg",
+          "category": "IMAGE",
+          "size": 36926,
+          "type": "jpg",
+          "initialSize": 36926,
+          "optimized": false,
+          "height": 219,
+          "width": 219
+        },
+        "610339e2": {
+          "id": "610339e2",
+          "path": "images/placeholders/vendor6.jpg",
+          "output": "images/placeholders/vendor6.jpg",
+          "name": "vendor6.jpg",
+          "category": "IMAGE",
+          "size": 55701,
+          "type": "jpg",
+          "initialSize": 55701,
+          "optimized": false,
+          "height": 219,
+          "width": 219
+        },
+        "b845208e": {
+          "id": "b845208e",
+          "path": "images/placeholders/vendor7.jpg",
+          "output": "images/placeholders/vendor7.jpg",
+          "name": "vendor7.jpg",
+          "category": "IMAGE",
+          "size": 37280,
+          "type": "jpg",
+          "initialSize": 37280,
+          "optimized": false,
+          "height": 219,
+          "width": 219
+        },
+        "8833f73c": {
+          "id": "8833f73c",
+          "path": "images/placeholders/vendor9.jpg",
+          "output": "images/placeholders/vendor9.jpg",
+          "name": "vendor9.jpg",
+          "category": "IMAGE",
+          "size": 22931,
+          "type": "jpg",
+          "initialSize": 22931,
+          "optimized": false,
+          "height": 219,
+          "width": 219
+        },
+        "e8b6ba77": {
+          "id": "e8b6ba77",
+          "path": "images/placeholders/vendor8.jpg",
+          "output": "images/placeholders/vendor8.jpg",
+          "name": "vendor8.jpg",
+          "category": "IMAGE",
+          "size": 46225,
+          "type": "jpg",
+          "initialSize": 46225,
+          "optimized": false,
+          "height": 219,
+          "width": 219
+        },
+        "9a46a341": {
+          "id": "9a46a341",
+          "path": "page-templates/about.php",
+          "output": "page-templates/about.php",
+          "name": "about.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "2d321e5f": {
+          "id": "2d321e5f",
+          "path": "images/placeholders/team1.jpg",
+          "output": "images/placeholders/team1.jpg",
+          "name": "team1.jpg",
+          "category": "IMAGE",
+          "size": 40225,
+          "type": "jpg",
+          "initialSize": 40225,
+          "optimized": false,
+          "height": 191,
+          "width": 191
+        },
+        "4b9cf5fe": {
+          "id": "4b9cf5fe",
+          "path": "images/placeholders/team2.jpg",
+          "output": "images/placeholders/team2.jpg",
+          "name": "team2.jpg",
+          "category": "IMAGE",
+          "size": 34662,
+          "type": "jpg",
+          "initialSize": 34662,
+          "optimized": false,
+          "height": 191,
+          "width": 191
+        },
+        "b6b5cbbf": {
+          "id": "b6b5cbbf",
+          "path": "images/placeholders/team3.jpg",
+          "output": "images/placeholders/team3.jpg",
+          "name": "team3.jpg",
+          "category": "IMAGE",
+          "size": 15772,
+          "type": "jpg",
+          "initialSize": 15772,
+          "optimized": false,
+          "height": 191,
+          "width": 191
+        },
+        "09c24107": {
+          "id": "09c24107",
+          "path": "images/placeholders/team4.jpg",
+          "output": "images/placeholders/team4.jpg",
+          "name": "team4.jpg",
+          "category": "IMAGE",
+          "size": 35164,
+          "type": "jpg",
+          "initialSize": 35164,
+          "optimized": false,
+          "height": 191,
+          "width": 191
+        },
+        "16b56b82": {
+          "id": "16b56b82",
+          "path": "images/placeholders/team5.jpg",
+          "output": "images/placeholders/team5.jpg",
+          "name": "team5.jpg",
+          "category": "IMAGE",
+          "size": 42012,
+          "type": "jpg",
+          "initialSize": 42012,
+          "optimized": false,
+          "height": 191,
+          "width": 191
+        },
+        "3fb5638d": {
+          "id": "3fb5638d",
+          "path": "images/placeholders/team6.jpg",
+          "output": "images/placeholders/team6.jpg",
+          "name": "team6.jpg",
+          "category": "IMAGE",
+          "size": 25910,
+          "type": "jpg",
+          "initialSize": 25910,
+          "optimized": false,
+          "height": 191,
+          "width": 191
+        },
+        "a0e726d3": {
+          "id": "a0e726d3",
+          "path": "images/placeholders/contact-avatar.jpg",
+          "output": "images/placeholders/contact-avatar.jpg",
+          "name": "contact-avatar.jpg",
+          "category": "IMAGE",
+          "size": 13936,
+          "type": "jpg",
+          "initialSize": 13936,
+          "optimized": false,
+          "height": 114,
+          "width": 115
+        },
+        "06b635df": {
+          "id": "06b635df",
+          "path": "page-templates/wevedone.php",
+          "output": "page-templates/wevedone.php",
+          "name": "wevedone.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "3187d644": {
+          "id": "3187d644",
+          "path": "assets/javascripts/vendor/isotope.js",
+          "output": "assets/javascripts/vendor/isotope-dist.js",
+          "name": "isotope.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "9f09bd57"
+          ],
+          "type": "javascript"
+        },
+        "c3c56039": {
+          "id": "c3c56039",
+          "path": "images/placeholders/iso1.jpg",
+          "output": "images/placeholders/iso1.jpg",
+          "name": "iso1.jpg",
+          "category": "IMAGE",
+          "size": 69720,
+          "type": "jpg",
+          "initialSize": 69720,
+          "optimized": false,
+          "height": 226,
+          "width": 262
+        },
+        "60cd0201": {
+          "id": "60cd0201",
+          "path": "images/placeholders/iso2.jpg",
+          "output": "images/placeholders/iso2.jpg",
+          "name": "iso2.jpg",
+          "category": "IMAGE",
+          "size": 65421,
+          "type": "jpg",
+          "initialSize": 65421,
+          "optimized": false,
+          "height": 226,
+          "width": 262
+        },
+        "f7fcd059": {
+          "id": "f7fcd059",
+          "path": "images/placeholders/iso3.jpg",
+          "output": "images/placeholders/iso3.jpg",
+          "name": "iso3.jpg",
+          "category": "IMAGE",
+          "size": 39796,
+          "type": "jpg",
+          "initialSize": 39796,
+          "optimized": false,
+          "height": 226,
+          "width": 262
+        },
+        "c94bf236": {
+          "id": "c94bf236",
+          "path": "images/placeholders/iso4.jpg",
+          "output": "images/placeholders/iso4.jpg",
+          "name": "iso4.jpg",
+          "category": "IMAGE",
+          "size": 49132,
+          "type": "jpg",
+          "initialSize": 49132,
+          "optimized": false,
+          "height": 226,
+          "width": 262
+        },
+        "85e06572": {
+          "id": "85e06572",
+          "path": "images/placeholders/iso5.jpg",
+          "output": "images/placeholders/iso5.jpg",
+          "name": "iso5.jpg",
+          "category": "IMAGE",
+          "size": 81703,
+          "type": "jpg",
+          "initialSize": 81703,
+          "optimized": false,
+          "height": 226,
+          "width": 262
+        },
+        "ce51b02b": {
+          "id": "ce51b02b",
+          "path": "images/placeholders/iso6.jpg",
+          "output": "images/placeholders/iso6.jpg",
+          "name": "iso6.jpg",
+          "category": "IMAGE",
+          "size": 47112,
+          "type": "jpg",
+          "initialSize": 47112,
+          "optimized": false,
+          "height": 226,
+          "width": 262
+        },
+        "475dce74": {
+          "id": "475dce74",
+          "path": "images/placeholders/iso7.jpg",
+          "output": "images/placeholders/iso7.jpg",
+          "name": "iso7.jpg",
+          "category": "IMAGE",
+          "size": 46360,
+          "type": "jpg",
+          "initialSize": 46360,
+          "optimized": false,
+          "height": 226,
+          "width": 262
+        },
+        "b5ed1379": {
+          "id": "b5ed1379",
+          "path": "images/placeholders/iso8.jpg",
+          "output": "images/placeholders/iso8.jpg",
+          "name": "iso8.jpg",
+          "category": "IMAGE",
+          "size": 45929,
+          "type": "jpg",
+          "initialSize": 45929,
+          "optimized": false,
+          "height": 354,
+          "width": 262
+        },
+        "235edf87": {
+          "id": "235edf87",
+          "path": "images/placeholders/iso9.jpg",
+          "output": "images/placeholders/iso9.jpg",
+          "name": "iso9.jpg",
+          "category": "IMAGE",
+          "size": 24720,
+          "type": "jpg",
+          "initialSize": 24720,
+          "optimized": false,
+          "height": 226,
+          "width": 262
+        },
+        "bd0e91c7": {
+          "id": "bd0e91c7",
+          "path": "assets/raw-assets/_less/theme/grid.less",
+          "output": "assets/raw-assets/_less/theme/grid.css",
+          "name": "grid.less",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "compress": false,
+          "sourceMaps": false,
+          "strictMath": false,
+          "strictUnits": false,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "e6434721"
+          ],
+          "type": "less"
         }
       },
       "deploymentHistory": {},
