css and inner pages update

--- a/.htaccess
+++ b/.htaccess
@@ -667,11 +667,11 @@ FileETag None
 # BEGIN WordPress
 <IfModule mod_rewrite.c>
 RewriteEngine On
-RewriteBase /
+RewriteBase /atu/
 RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /index.php [L]
+RewriteRule . /atu/index.php [L]
 </IfModule>
 
 # END WordPress
