--- a/wp-content/themes/atu/prepros.cfg
+++ b/wp-content/themes/atu/prepros.cfg
@@ -3622,6 +3622,28 @@
             "e6434721"
           ],
           "type": "less"
+        },
+        "c6b59539": {
+          "id": "c6b59539",
+          "path": "page-templates/single.php",
+          "output": "page-templates/single.php",
+          "name": "single.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "07a146bf": {
+          "id": "07a146bf",
+          "path": "sidebar-secondary.php",
+          "output": "sidebar-secondary.php",
+          "name": "sidebar-secondary.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
         }
       },
       "deploymentHistory": {},
