--- a/wp-content/themes/atu/prepros.cfg
+++ b/wp-content/themes/atu/prepros.cfg
@@ -2495,50 +2495,6 @@
           "parents": [],
           "type": "php"
         },
-        "b33c3d02": {
-          "id": "b33c3d02",
-          "path": "search-property.php",
-          "output": "search-property.php",
-          "name": "search-property.php",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "php"
-        },
-        "9ec6b7e5": {
-          "id": "9ec6b7e5",
-          "path": "single-property.php",
-          "output": "single-property.php",
-          "name": "single-property.php",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "php"
-        },
-        "ef926431": {
-          "id": "ef926431",
-          "path": "content-property.php",
-          "output": "content-property.php",
-          "name": "content-property.php",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "php"
-        },
-        "c7682fc7": {
-          "id": "c7682fc7",
-          "path": "page-title.php",
-          "output": "page-title.php",
-          "name": "page-title.php",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "php"
-        },
         "e192d501": {
           "id": "e192d501",
           "path": "loop-property.php",
@@ -2568,17 +2524,6 @@
             "e6434721"
           ],
           "type": "less"
-        },
-        "c74d2038": {
-          "id": "c74d2038",
-          "path": "search-property-bak.php",
-          "output": "search-property-bak.php",
-          "name": "search-property-bak.php",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "php"
         },
         "de676728": {
           "id": "de676728",
@@ -3622,6 +3567,41 @@
           "imported": false,
           "parents": [],
           "type": "php"
+        },
+        "0991699f": {
+          "id": "0991699f",
+          "path": "archive-venue.php",
+          "output": "archive-venue.php",
+          "name": "archive-venue.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "e7761228": {
+          "id": "e7761228",
+          "path": "page-templates/venue-list.php",
+          "output": "page-templates/venue-list.php",
+          "name": "venue-list.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "7d68d32b": {
+          "id": "7d68d32b",
+          "path": "images/small-logo.png",
+          "output": "images/small-logo.png",
+          "name": "small-logo.png",
+          "category": "IMAGE",
+          "size": 3238,
+          "type": "png",
+          "initialSize": 3238,
+          "optimized": false,
+          "height": 30,
+          "width": 30
         }
       },
       "deploymentHistory": {},
