--- a/wp-content/themes/atu/prepros.cfg
+++ b/wp-content/themes/atu/prepros.cfg
@@ -3679,6 +3679,17 @@
           "imported": false,
           "parents": [],
           "type": "php"
+        },
+        "fe719dcb": {
+          "id": "fe719dcb",
+          "path": "content-vendors.php",
+          "output": "content-vendors.php",
+          "name": "content-vendors.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
         }
       },
       "deploymentHistory": {},
