--- a/wp-content/themes/atu/prepros.cfg
+++ b/wp-content/themes/atu/prepros.cfg
@@ -9,6 +9,17 @@
       "name": "atu",
       "path": "",
       "files": {
+        "13308177": {
+          "id": "13308177",
+          "path": "single-vendor.php",
+          "output": "single-vendor.php",
+          "name": "single-vendor.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
         "42402403": {
           "id": "42402403",
           "path": "assets/raw-assets/_less/theme/checkbox.less",
@@ -3619,6 +3630,28 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "f42e5aa1": {
+          "id": "f42e5aa1",
+          "path": "taxonomy.php",
+          "output": "taxonomy.php",
+          "name": "taxonomy.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "31c9c868": {
+          "id": "31c9c868",
+          "path": "archive-vendor.php",
+          "output": "archive-vendor.php",
+          "name": "archive-vendor.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
         }
       },
       "deploymentHistory": {},
