--- a/wp-content/themes/wepn/prepros.cfg
+++ b/wp-content/themes/wepn/prepros.cfg
@@ -3630,6 +3630,17 @@
           "optimized": false,
           "height": 200,
           "width": 220
+        },
+        "44311e5e": {
+          "id": "44311e5e",
+          "path": "page-templates/rsvp-group.php",
+          "output": "page-templates/rsvp-group.php",
+          "name": "rsvp-group.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
         }
       },
       "deploymentHistory": {},
