--- a/wp-content/themes/wepn/prepros.cfg
+++ b/wp-content/themes/wepn/prepros.cfg
@@ -2494,19 +2494,6 @@
           ],
           "type": "less"
         },
-        "de676728": {
-          "id": "de676728",
-          "path": "images/logo.png",
-          "output": "images/logo.png",
-          "name": "logo.png",
-          "category": "IMAGE",
-          "size": 24205,
-          "type": "png",
-          "initialSize": 24205,
-          "optimized": false,
-          "height": 74,
-          "width": 175
-        },
         "bc77a80d": {
           "id": "bc77a80d",
           "path": "screenshot.png",
@@ -3502,19 +3489,6 @@
           "parents": [],
           "type": "php"
         },
-        "7d68d32b": {
-          "id": "7d68d32b",
-          "path": "images/small-logo.png",
-          "output": "images/small-logo.png",
-          "name": "small-logo.png",
-          "category": "IMAGE",
-          "size": 3238,
-          "type": "png",
-          "initialSize": 3238,
-          "optimized": false,
-          "height": 30,
-          "width": 30
-        },
         "a8f8de16": {
           "id": "a8f8de16",
           "path": "assets/javascripts/plugins-min.js",
@@ -3641,6 +3615,45 @@
           "imported": false,
           "parents": [],
           "type": "php"
+        },
+        "de676728": {
+          "id": "de676728",
+          "path": "images/logo.png",
+          "output": "images/logo.png",
+          "name": "logo.png",
+          "category": "IMAGE",
+          "size": 23826,
+          "type": "png",
+          "initialSize": 23826,
+          "optimized": false,
+          "height": 150,
+          "width": 200
+        },
+        "7d68d32b": {
+          "id": "7d68d32b",
+          "path": "images/small-logo.png",
+          "output": "images/small-logo.png",
+          "name": "small-logo.png",
+          "category": "IMAGE",
+          "size": 2097,
+          "type": "png",
+          "initialSize": 2097,
+          "optimized": false,
+          "height": 30,
+          "width": 30
+        },
+        "37cf9853": {
+          "id": "37cf9853",
+          "path": "images/logo-sm.png",
+          "output": "images/logo-sm.png",
+          "name": "logo-sm.png",
+          "category": "IMAGE",
+          "size": 17767,
+          "type": "png",
+          "initialSize": 17767,
+          "optimized": false,
+          "height": 94,
+          "width": 93
         }
       },
       "deploymentHistory": {},
