--- a/wp-content/themes/wepn/prepros.cfg
+++ b/wp-content/themes/wepn/prepros.cfg
@@ -1405,6 +1405,7 @@
           "customOutput": false,
           "imported": true,
           "parents": [
+            "e6434721",
             "b0bde9d5"
           ],
           "type": "less"
@@ -3654,6 +3655,25 @@
           "optimized": false,
           "height": 94,
           "width": 93
+        },
+        "eac85454": {
+          "id": "eac85454",
+          "path": "assets/raw-assets/_less/theme/panel.less",
+          "output": "assets/raw-assets/_less/theme/panel.css",
+          "name": "panel.less",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "compress": false,
+          "sourceMaps": false,
+          "strictMath": false,
+          "strictUnits": false,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "e6434721"
+          ],
+          "type": "less"
         }
       },
       "deploymentHistory": {},
