--- a/wp-content/themes/wepn/prepros.cfg
+++ b/wp-content/themes/wepn/prepros.cfg
@@ -2135,15 +2135,17 @@
           "output": "assets/raw-assets/_less/theme/parallax.css",
           "name": "parallax.less",
           "category": "CSS",
-          "autoCompile": true,
+          "autoCompile": false,
           "autoprefixer": false,
           "compress": false,
           "sourceMaps": false,
           "strictMath": false,
           "strictUnits": false,
           "customOutput": false,
-          "imported": false,
-          "parents": [],
+          "imported": true,
+          "parents": [
+            "e6434721"
+          ],
           "type": "less"
         },
         "4764fd81": {
@@ -2687,22 +2689,6 @@
             "e6434721"
           ],
           "type": "less"
-        },
-        "e91d1df2": {
-          "id": "e91d1df2",
-          "path": "assets/raw-assets/_less/theme/parallax.css",
-          "output": "assets/raw-assets/_less/theme/parallax-dist.css",
-          "name": "parallax.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
         },
         "b7643c21": {
           "id": "b7643c21",
@@ -3886,7 +3872,13 @@
               "comments": false,
               "preserve_line": false,
               "screw_ie8": false,
-              "preamble": null
+              "preamble": null,
+              "indent_start": 0,
+              "indent_level": 4,
+              "width": 80,
+              "max_line_len": 32000,
+              "source_map": null,
+              "quote_style": 0
             }
           }
         }
