--- a/wp-content/themes/wepn/prepros.cfg
+++ b/wp-content/themes/wepn/prepros.cfg
@@ -3699,6 +3699,17 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "cf663d2c": {
+          "id": "cf663d2c",
+          "path": "page-templates/contact2.php",
+          "output": "page-templates/contact2.php",
+          "name": "contact2.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
         }
       },
       "deploymentHistory": {},
@@ -3898,7 +3909,13 @@
               "comments": false,
               "preserve_line": false,
               "screw_ie8": false,
-              "preamble": null
+              "preamble": null,
+              "indent_start": 0,
+              "indent_level": 4,
+              "width": 80,
+              "max_line_len": 32000,
+              "source_map": null,
+              "quote_style": 0
             }
           }
         }
